chore(control): clean up SonarCloud maintainability findings on the PID Tuner
- Math.clamp instead of nested min/max; reword comments Sonar read as code;
  @SuppressWarnings(java:S6218) on the array-carrying transport records
  (never compared/hashed).
- Shared PidType alias; extract nested ternary/template literals; String.raw
  for the regex strings in pidGainRewrite.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SSzxT4Qk6GHiyDzNKLkASH